--- a/fdusd/data.yml
+++ b/fdusd/data.yml
@@ -5,8 +5,7 @@ rating: A-
 links:
   website: https://firstdigitallabs.com
   twitter: https://twitter.com/FDLabsHQ
-whitepaper: 
-  https://firstdigitallabs.com/workspace/uploads/FDUSD-Whitepaper-25216064ca0cc8.pdf
+whitepaper: https://firstdigitallabs.com/workspace/uploads/FDUSD-Whitepaper-25216064ca0cc8.pdf
 overview: |
   First Digital USD is a reserve-backed stablecoin issued by First Digital Limited. FDUSD has been issued on Ethereum and the BNB Smart Chain.
 details:
@@ -18,31 +17,28 @@ details:
     value: |
       1.FDUSD is intended to be a fully backed by cash and cash equivalent assets. Tokens are intended to be redeemable 1:1 for U.S. dollars.
       2.Reserved assets are held in fully segregated bankruptcy-remote holding structures.
-      
-    
+
   - title: Backing Assets
     value: |
       1.U.S. TREASURY SECURITIES
       2.U.S. Treasury Repurchase Agreements
       3.Cash
-      
-      
 
 team:
-  # - avatar: 
-  #   name: 
-  #   title: 
-  #   twitter: 
-  #   linkedin: 
-  # - avatar: 
-  #   name: 
-  #   title: 
-  #   twitter: 
-  # - avatar: 
-  #   name: 
-  #   title: 
-  #   twitter: 
-  #   linkedin: 
+  # - avatar:
+  #   name:
+  #   title:
+  #   twitter:
+  #   linkedin:
+  # - avatar:
+  #   name:
+  #   title:
+  #   twitter:
+  # - avatar:
+  #   name:
+  #   title:
+  #   twitter:
+  #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -63,7 +59,7 @@ financial_analysis:
     score: N.A.
     analysis: The total FDUSD supply, for which each FDUSD is assigned a redemption value of US$1.00 by the Company, does not exceed the balance of the Reserve Accounts reported.
     reserve_holdings_percentage:
-      - title: U.S. Treasury Bills	
+      - title: U.S. Treasury Bills
         value: 1423078047.13
       - title: U.S. Treasury Debt
         value: 118000000.00
@@ -102,9 +98,9 @@ financial_analysis:
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -119,19 +115,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by certik .
       - title: Security Auditors
-        value: Certik 
+        value: Certik
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -141,7 +137,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -173,7 +169,7 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
