--- a/frax/data.yml
+++ b/frax/data.yml
@@ -3,16 +3,10 @@ description: FRAX is a unique stablecoin ecosystem using both algorithms and col
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://frax.finance/
-  - name: Twitter
-    url: http://twitter.com/fraxfinance
-  - name: GitHub
-    url: https://github.com/fraxfinance
-  - name: Linkedin
-    url: 
-whitepaper: 
-  https://docs.frax.finance/overview
+  website: https://frax.finance
+  twitter: http://twitter.com/fraxfinance
+  github: https://github.com/fraxfinance
+whitepaper: https://docs.frax.finance/overview
 overview: |
   Frax attempts to be the first fractional-algorithmic stablecoin protocol to implement design principles of both collateralized and algorithmic stablecoins. The Frax protocol is a two token system - the stablecoin FRAX, and Frax Shares (FXS), which are used to stabilize the system, accrue seigniorage revenue and fees, as well as provide governance rights. The degree to which FRAX is collateralized is determined by market forces, with the collateral ratio determining the proportion of FRAX outstanding to be backed by collateral, with the remainder in FXS.
 details:
@@ -23,7 +17,7 @@ details:
   - title: Stability Mechanism
     value: |
       Frax operates on a fractional-algorithmic basis, meaning that the amount of collateral backing each Frax coin can vary based on market conditions. When demand for Frax is high, the protocol reduces the amount of collateral needed, allowing for more coins to be minted. Conversely, when demand is low, the protocol increases the collateral ratio to maintain stablity.
-    
+
   - title: Backing Assets
     value: |
       1.FXS
@@ -43,23 +37,21 @@ details:
 
       Frax's founder, Sam, has announced the development of a crypto native Consumer Price Index (CPI). The proposed CPI will have its own native stablecoin (Frax Price Index) and governance token (Frax Price Index Shares). The new product will enable FRAX to break free of the USD peg and become the first truly decentralized and permissionless crypto native unit of account. Holders of the new FPI token will experience an increase in the dollar-denominated value of their holdings every month. Hence, the FPI also seeks to serve as a hedge against inflation.
 
-      
-
 team:
-  - avatar: 
+  - avatar:
     name: Jason Huan
     title: Co-Founder of Blockchain
     twitter: https://twitter.com/jasonhuan_
     linkedin: https://www.linkedin.com/in/jason-huan/
-  - avatar: 
+  - avatar:
     name: Sam Kazemian
     title: Founder of Frax Finance and Co-Founder of Everipedia
     twitter: https://twitter.com/samkazemian
-  # - avatar: 
-  #   name: 
-  #   title: 
-  #   twitter: 
-  #   linkedin: 
+  # - avatar:
+  #   name:
+  #   title:
+  #   twitter:
+  #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -88,38 +80,38 @@ financial_analysis:
         value: 649.59
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -134,19 +126,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by certik .
       - title: Security Auditors
-        value: Certik 
+        value: Certik
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -156,7 +148,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -188,7 +180,7 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
@@ -235,7 +227,7 @@ security_and_compliance:
           Enabled through the FRAX governance system, allowing FXS holders to propose, discuss, and vote on changes directly affecting the protocol and its stablecoins.
       - title: Reserve Management
         value: |
-          Managed dynamically, with reserves consisting of cryptocurrencies and potentially other assets, adjusted according to the protocol's needs and governance decisions.  
+          Managed dynamically, with reserves consisting of cryptocurrencies and potentially other assets, adjusted according to the protocol's needs and governance decisions.
       - title: Emergency Decision Making
         value: |
           The governance framework likely includes mechanisms for rapid response to critical protocol issues, though specific emergency processes are not detailed.
@@ -246,4 +238,4 @@ security_and_compliance:
         value: |
           Frax Finance emphasizes regulatory compliance and transparency, with mechanisms in place for auditability and adherence to financial regulations.
       - title: Accountability Mechanisms
-        value: 
+        value:
