--- a/tusd/data.yml
+++ b/tusd/data.yml
@@ -3,14 +3,9 @@ description: TrueUSD is the first USD-pegged stablecoin to deploy daily attestat
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://tusd.io/
-  - name: Twitter
-    url: http://twitter.com/tusdio
-  - name: LinkedIn
-    url: 
-whitepaper: 
-  https://www.studocu.com/id/document/universitas-terbuka/teknologi-komunikasi-dan-informasi/tusd-white-paper-cryptocurrency/33454002
+  website: https://tusd.io
+  twitter: http://twitter.com/tusdio
+whitepaper: https://www.studocu.com/id/document/universitas-terbuka/teknologi-komunikasi-dan-informasi/tusd-white-paper-cryptocurrency/33454002
 overview: |
   TrueUSD (TUSD) is a digital currency pegged to the US Dollar, offering real-time attestations of its reserves. It was issued by the TrustToken platform, which currently operates as Archblock. TrueUSD is available on multiple blockchain networks and is used in trading and transfers in cryptocurrency exchanges and DeFi protocols.
 details:
@@ -19,47 +14,47 @@ details:
       Asset-backed Stablecoins:TrueUSD(TUSD) is the first digital asset with live on-chain attestations by independent third-party institutions and is backed 1:1 with the U.S. dollar (USD). So far, it has been listed on more than 100 trading platforms such as Binance and Huobi and is live on 12 mainstream public chains, including Ethereum, TRON, Avalanche, BSC, Fantom, and Polygon.
   - title: Stability Mechanism
     value: |
-      TrueUSD is attested to in real-time by an independent, industry-specialized accounting firm in the U.S., to ensure the 1:1 ratio of its USD reserve to the circulating token supply and the 100% collateral rate. With the integration of Chainlink PoR, TrueUSD becomes the first USD-Backed stablecoin to secure minting and further ensure transparency 
-    
+      TrueUSD is attested to in real-time by an independent, industry-specialized accounting firm in the U.S., to ensure the 1:1 ratio of its USD reserve to the circulating token supply and the 100% collateral rate. With the integration of Chainlink PoR, TrueUSD becomes the first USD-Backed stablecoin to secure minting and further ensure transparency
+
   - title: Backing Assets
     value: |
       1.U.S dollars
       2.U.S Treasuries Bills
       3.First Digital Trust limited
-      
+
   - title: History
     value: |
       Seeing the issues surrounding whether or not Tether was fully backed and had reliable banking relationships, Trust Token decided to created a stablecoin called TrueUSD (TUSD). Introduced mid 2018, TrueUSD is a fully collateralized stablecoin backed by U.S. Dollars, launched via the Trust Token platform as the platform's continued effort to tokenize real-world assets on their collateralized platform. Each TUSD token is backed by one dollar and was launched and distributed via a Trust Token platform smart contract. Trust Token has partnered with registered fiduciaries and banks that hold the assets backing the TUSD tokens.
       In December 2019, TrueUSD became the first stablecoin to offer real time audits.
 
 team:
-  - avatar: 
+  - avatar:
     name: Alex de Lorraine
     title: CEO at Archblock and MD of TrueCurrencies (TUSD)
     twitter: https://twitter.com/alexdelorraine
     linkedin: https://www.linkedin.com/in/alexdelorraine/
-  - avatar: 
+  - avatar:
     name: Bill Wolf
     title: Chief Investment Officer at Archblock
     linkedin: https://www.linkedin.com/in/bill-wolf-5015a343/
-  - avatar: 
+  - avatar:
     name: Diana Bushard
     title: General Counsel at Archblock
     linkedin: https://www.linkedin.com/in/diana-bushard-21ab461/
-  - avatar: 
+  - avatar:
     name: Rafael Cosman
-    title: Co-Founder and Board Member of Archblock 
+    title: Co-Founder and Board Member of Archblock
     twitter: https://twitter.com/RafaelCosman
     linkedin: https://www.linkedin.com/in/rafaelcosman/
-  - avatar: 
+  - avatar:
     name: Ryan Christensen
     title: Board Member of Archblock
     linkedin: https://www.linkedin.com/in/ryanechristensen/
-  # - avatar: 
-  #   name: 
-  #   title: 
-  #   twitter: 
-  #   linkedin: 
+  # - avatar:
+  #   name:
+  #   title:
+  #   twitter:
+  #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -82,44 +77,44 @@ financial_analysis:
     reserve_holdings_percentage:
       - title: US Treasury Bills
         value: 751913076.50
-      - title: Fill digital trust limited 
+      - title: Fill digital trust limited
         value: 501850000.00
       - title: Us dollar cash
         value: 40780014.51
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -134,19 +129,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by certik .
       - title: Security Auditors
-        value: Certik 
+        value: Certik
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -156,7 +151,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -188,11 +183,11 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
-        value: 
+        value:
       - title: Smart Contract
         value: https://etherscan.io/address/0xb650eb28d35691dd1bd481325d40e65273844f9b#code#L1
       - title: Token launch
@@ -248,4 +243,3 @@ security_and_compliance:
       - title: Accountability Mechanisms
         value: |
           Features real-time reserve attestations and transparent, publicly accessible audit results. TUSD's collaboration with Moore Hong Kong for daily attestation services starting in late January 2024 exemplifies its dedication to transparency and accountability in the stablecoin ecosystem​​.
-          
