--- a/usdd/data.yml
+++ b/usdd/data.yml
@@ -3,12 +3,8 @@ description: USDD is an overcollateralized, multi-chain stablecoin with TRON DAO
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://usdd.io/
-  - name: Twitter
-    url: http://twitter.com/usddio
-  - name: LinkedIn
-    url: 
+  website: https://usdd.io
+  twitter: http://twitter.com/usddio
 whitepaper: 
   https://usdd.network/USDD-en.pdf
 overview: |
