--- a/usdt/data.yml
+++ b/usdt/data.yml
@@ -1,6 +1,6 @@
 name: USDT
 description: USDT, also known as Tether, is the stablecoin with the highest
-  market capitalization, backed by US dollar. 
+  market capitalization, backed by US dollar.
 logo: assets/logo.png
 rating: A-
 links:
@@ -90,7 +90,8 @@ financial_analysis:
   financial_audit:
     auditors: BDO
     score: N.A.
-    analysis: ln our opinion, the CRR as prepared by the management of the Group as of 30 September 2023, is, in allmaterial respects,
+    analysis:
+      ln our opinion, the CRR as prepared by the management of the Group as of 30 September 2023, is, in allmaterial respects,
       fairly presented in accordance with the criteria.
     reserve_holdings_percentage:
       - title: Cash & Cash Equivalents & Other Short-Term Deposits
