--- a/pyusd/data.yml
+++ b/pyusd/data.yml
@@ -3,12 +3,8 @@ description: PayPal USD is designed to maintain a stable $1 USD value. It’s ba
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://www.paypal.com/pyusd
-  - name: Twitter
-    url: https://twitter.com/PayPal
-  - name: Linkedin
-    url: 
+  website: https://www.paypal.com/pyusd
+  twitter: https://twitter.com/PayPal
 whitepaper:
 overview: |
   PYUSD is a USD-backed stablecoin on the Ethereum blockchain. Reserves are held 100% in US dollar deposits, US treasuries and cash equivalents – meaning that customer funds are available for 1:1 redemption with Paxos.
@@ -19,32 +15,30 @@ details:
   - title: Stability Mechanism
     value: |
       100% backed by U.S. dollar deposits, short-term U.S Treasuries and similar cash equivalents. PayPal USD is redeemable 1:1 for U.S. dollars and is issued by Paxos Trust Company
-    
+
   - title: Backing Assets
     value: |
       1.U.S dollars
       2.U.S Treasuries 
       3.cash equivalents
-      
+
   - title: History
     value: |
       Paxos-issued stablecoin PYUSD – and its reserves – are subject to strict regulatory oversight by the New York State Department of Financial Services. Customer assets are also protected from bankruptcy and fully segregated from corporate assets.
 
       The Paxos-issued reserve reports and attestations for PayPal USD are published monthly. Attestation reports are issued by WithumSmith+Brown, PC, an independent third-party accounting firm. Withum’s examination is conducted in accordance with attestation standards established by the American Institute of Certified Public Accountants (AICPA).
 
-      
-
 team:
-  - avatar: 
+  - avatar:
     name: Dan Schulman
     title: Former President and CEO of PayPal
     twitter: https://twitter.com/Dan_Schulman
     linkedin: https://www.linkedin.com/in/dan-schulman/
-  # - avatar: 
-  #   name: 
-  #   title: 
-  #   twitter: 
-  #   linkedin: 
+  # - avatar:
+  #   name:
+  #   title:
+  #   twitter:
+  #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -61,48 +55,48 @@ social_media:
 
 financial_analysis:
   financial_audit:
-    auditors: Paxos 
+    auditors: Paxos
     score: N.A.
-    analysis: Total Tokens Outstanding $264,531,846,Total Backing Net Assets $265,432,408 
+    analysis: Total Tokens Outstanding $264,531,846,Total Backing Net Assets $265,432,408
     reserve_holdings_percentage:
-      - title: U.S. Treasury Collateralized Reverse Repurchase Agreements 
-        value: 264971000 
-      - title: Cash Deposits 
-        value: 461408 
+      - title: U.S. Treasury Collateralized Reverse Repurchase Agreements
+        value: 264971000
+      - title: Cash Deposits
+        value: 461408
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -117,19 +111,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by trail of bits .
       - title: Security Auditors
-        value: trail of bits 
+        value: trail of bits
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -139,7 +133,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -171,13 +165,13 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
-        value: 
+        value:
       - title: Smart Contract
-        value:  https://github.com/paxosglobal/pyusd-contract
+        value: https://github.com/paxosglobal/pyusd-contract
       - title: Token launch
         value: |
           * Ethereum: 0x6c3ea9036406852006290770bedfcaba0e23a0e8
