--- a/usde/data.yml
+++ b/usde/data.yml
@@ -3,58 +3,53 @@ description: Ethena USD is an ethereum enabled crypto-native synthetic dollar wh
 logo: assets/logo.png
 rating: A-
 links:
-  - name: Website
-    url: https://www.ethena.fi
-  - name: Twitter
-    url: https://twitter.com/ethena_labs
-  - name: LinkedIn
-    url: 
-whitepaper: 
-  https://ethena-labs.gitbook.io/ethena-labs/
+  website: https://www.ethena.fi
+  twitter: https://twitter.com/ethena_labs
+whitepaper: https://ethena-labs.gitbook.io/ethena-labs/
 overview: |
   Ethena specializes in offering derivative infrastructure services to leverage staked Ethereum. Their products include USDe, a delta-neutral synthetic dollar with an embedded yield, and Internet Bonds, which are globally accessible floating and fixed-rate USD-denominated bonds. Additionally, they offer Repo Financing for capital-efficient and composable leverage. Ethena's focus is on creating a crypto-native yield-bearing synthetic dollar (USDe) that is independent of the banking system, with stability achieved through delta-neutral hedging across various trading venues.
   They also provide solutions for decentralized money market challenges, ensuring delta-neutral stability, censorship resistance, and scalability without overcollateralization. Ethena's platform allows users to deposit USD, Ethereum, or liquid staking tokens as collateral to create USDe, offering decentralized, scalable, stable assets with returns derived from Ethereum's economic activity and futures markets.
 details:
   - title: Type of Stablecoin
     value: |
-      crypto-backed Stablecoins: Ethena issues a synthetic dollar, USDe, backed exactly 100% by long positions in LSTs and offsetting short positions in ETH-USD perpetual futures. 
+      crypto-backed Stablecoins: Ethena issues a synthetic dollar, USDe, backed exactly 100% by long positions in LSTs and offsetting short positions in ETH-USD perpetual futures.
   - title: Stability Mechanism
     value: |
-      Ethena USDe is backed by allow listed LST tokens and offsetting ETH futures positions to create fully collateralized and delta-neutral backing to USD. 
+      Ethena USDe is backed by allow listed LST tokens and offsetting ETH futures positions to create fully collateralized and delta-neutral backing to USD.
   - title: Backing Assets
     value: |
       1.stETH
       2.wbETH
       3.short positions in ETH-USD perpetual futures
-   
+
 team:
-  # - avatar: 
+  # - avatar:
   #   name: Alex de Lorraine
   #   title: CEO at Archblock and MD of TrueCurrencies (TUSD)
   #   twitter: https://twitter.com/alexdelorraine
   #   linkedin: https://www.linkedin.com/in/alexdelorraine/
-  # - avatar: 
+  # - avatar:
   #   name: Bill Wolf
   #   title: Chief Investment Officer at Archblock
   #   linkedin: https://www.linkedin.com/in/bill-wolf-5015a343/
-  # - avatar: 
+  # - avatar:
   #   name: Diana Bushard
   #   title: General Counsel at Archblock
   #   linkedin: https://www.linkedin.com/in/diana-bushard-21ab461/
-  # - avatar: 
+  # - avatar:
   #   name: Rafael Cosman
-  #   title: Co-Founder and Board Member of Archblock 
+  #   title: Co-Founder and Board Member of Archblock
   #   twitter: https://twitter.com/RafaelCosman
   #   linkedin: https://www.linkedin.com/in/rafaelcosman/
-  # - avatar: 
+  # - avatar:
   #   name: Ryan Christensen
   #   title: Board Member of Archblock
   #   linkedin: https://www.linkedin.com/in/ryanechristensen/
-  # # - avatar: 
-  # #   name: 
-  # #   title: 
-  # #   twitter: 
-  # #   linkedin: 
+  # # - avatar:
+  # #   name:
+  # #   title:
+  # #   twitter:
+  # #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -70,51 +65,51 @@ social_media:
   #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
-  financial_audit: https://3400502003-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FsBsPyff5ft3inFy9jyjt%2Fuploads%2FS8e4wljMcMDkw6fMcnby%2FChaos%20Labs%20-%20Ethena%20LST%20Market%20Risk%20Analysis%20(1).pdf?alt=media&token=071b4952-5995-4805-8904-2e617176396e
+  financial_audit:
     auditors: Chaos Labs
     score: N.A.
     analysis: N.A.
     reserve_holdings_percentage:
       # - title: US Treasury Bills
       #   value: 751913076.50
-      # - title: Fill digital trust limited 
+      # - title: Fill digital trust limited
       #   value: 501850000.00
       # - title: Us dollar cash
       #   value: 40780014.51
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -129,19 +124,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by certik .
       - title: Security Auditors
-        value: Certik 
+        value: Certik
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -151,7 +146,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -183,7 +178,7 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
@@ -197,15 +192,15 @@ security_and_compliance:
       - title: Detailed Description of Technology
         value: |
           *  Ethena enables users to deposit either USD, Ethereum or liquid staking tokens as collateral to create USDe. Stability is ensured through delta-neutral hedging process across centralized and decentralized exchanges.
-  
+
   - title: Governance and Decentralization
     value:
       - title: Governance Structure
         value: |
-          
+
       - title: Voting Rights
         value: |
-          
+
       - title: Token Governance
         value: |
 
@@ -238,4 +233,3 @@ security_and_compliance:
 
       - title: Accountability Mechanisms
         value: |
-          
