--- a/usdt/data.yml
+++ b/usdt/data.yml
@@ -63,7 +63,7 @@ team:
     name: JL van der Velde
     title: CEO
     linkedin: https://www.linkedin.com/in/jl-van-der-velde-355218228
-  - avatar: https://media.licdn.com/dms/image/D4E03AQET4PyEcCqhPA/profile-displayphoto-shrink_800_800/0/1686771679988?e=1714608000&v=beta&t=2KBbCQm2EqaNeWWBEJo1pEf3FGBXdkzMOBUX_qq-PWA
+  - avatar: 
     name: Giancarlo Devasini
     title: CFO
     linkedin: https://www.linkedin.com/in/thiscarpenter
