--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -48,9 +48,9 @@ jobs:
         if [ -f "${dir}data.yml" ]; then
             echo "Processing folder: $dir"
             export PYTHONPATH="$PYTHONPATH:$(pwd)"
-            python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir');analysis.run_analysis()"
-            python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
-            python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir');analysis.run_analysis()"
+            python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir'); try: analysis.run_analysis() except Exception as e: print(f'Error in SosoValue analysis for $dir: {e}')"
+            python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir'); try: analysis.run_analysis() except Exception as e: print(f'Error in SosoValue analysis for $dir: {e}')"
+            python -c "import pyinsightic; analysis=pyinsightic.Twitter(project_dir='$dir'); try: analysis.run_analysis() except Exception as e: print(f'Error in SosoValue analysis for $dir: {e}')"
             echo "Analysis completed for $dir"
             
         fi
