--- a/usdp/data.yml
+++ b/usdp/data.yml
@@ -8,9 +8,8 @@ links:
   - name: Twitter
     url: https://twitter.com/PaxosStandard
   - name: LinkedIn
-    url: 
-whitepaper: 
-  https://standard.paxos.com/whitepaper.pdf
+    url:
+whitepaper: https://standard.paxos.com/whitepaper.pdf
 overview: |
   Paxos Standard is a fiat-collateralized stablecoin. The Paxos Standard tokens (PAX) are issued as ERC-20 tokens on the Ethereum blockchain and are collateralized 1:1 by USD held in Paxos-owned US bank accounts. It is also the one of three stablecoins approved by Wall Street regulators, alongside GUSD and BUSD.
 details:
@@ -20,7 +19,7 @@ details:
   - title: Stability Mechanism
     value: |
       The Paxos Standard tokens (PAX) are issued as ERC-20 tokens on the Ethereum blockchain and are collateralized 1:1 by USD held in Paxos-owned US bank accounts. It is also the one of three stablecoins approved by Wall Street regulators, alongside GUSD and BUSD.
-  
+
   - title: Backing Assets
     value: |
       1. U.S. Treasury Debt
@@ -35,33 +34,33 @@ details:
 
       Paxos Standard was built to improve the larger financial ecosystem by creating a frictionless global network where digital assets can be mobilized with significantly increased speed, flexibility, and accessibility. It officially began trading on September 27th, 2018. Paxos’ goal is to create a future where digital assets, commodities, and securities can be transferred anywhere at any time.
 team:
-  - avatar: 
+  - avatar:
     name: Richmond Teo
     title: Co-founder of Paxos
     twitter: https://twitter.com/rich_teo
     linkedin: https://www.linkedin.com/in/richteo/
-  - avatar: 
+  - avatar:
     name: Charles Cascarilla
     title: Co-founder and CEO of Paxos
     linkedin: https://www.linkedin.com/in/charlescascarilla/
-  # - avatar: 
+  # - avatar:
   #   name: Diana Bushard
   #   title: General Counsel at Archblock
   #   linkedin: https://www.linkedin.com/in/diana-bushard-21ab461/
-  # - avatar: 
+  # - avatar:
   #   name: Rafael Cosman
-  #   title: Co-Founder and Board Member of Archblock 
+  #   title: Co-Founder and Board Member of Archblock
   #   twitter: https://twitter.com/RafaelCosman
   #   linkedin: https://www.linkedin.com/in/rafaelcosman/
-  # - avatar: 
+  # - avatar:
   #   name: Ryan Christensen
   #   title: Board Member of Archblock
   #   linkedin: https://www.linkedin.com/in/ryanechristensen/
-  # # - avatar: 
-  # #   name: 
-  # #   title: 
-  # #   twitter: 
-  # #   linkedin: 
+  # # - avatar:
+  # #   name:
+  # #   title:
+  # #   twitter:
+  # #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -77,7 +76,7 @@ social_media:
   #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
-  financial_audit: https://paxos.com/usdp-transparency/
+  financial_audit:
     auditors: PAXOS
     score: N.A.
     analysis: N.A.
@@ -88,38 +87,38 @@ financial_analysis:
         value: 195603337
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -134,19 +133,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by certik .
       - title: Security Auditors
-        value: Certik 
+        value: Certik
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -156,7 +155,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -188,13 +187,13 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
-        value: 
+        value:
       - title: Smart Contract
-        value: - https://etherscan.io/address/0xb54d4e8bb827f99af764b37249990fa9d6840e20#code#L1
+        value: https://etherscan.io/address/0xb54d4e8bb827f99af764b37249990fa9d6840e20#code#L1
       - title: Token launch
         value: |
           * Ethereum: 0x8e870d67f660d95d5be530380d0ec0bd388289e1
@@ -256,4 +255,3 @@ security_and_compliance:
       - title: Accountability Mechanisms
         value: |
           Paxos ensures accountability through regulatory compliance, reserve transparency, and consumer protection measures under New York banking law. In the event of insolvency, customer assets are protected and segregated​​.
-          
