--- a/ust/data.yml
+++ b/ust/data.yml
@@ -8,9 +8,8 @@ links:
   - name: Twitter
     url: https://twitter.com/ethena_labs
   - name: LinkedIn
-    url: 
-whitepaper: 
-  https://assets.website-files.com/611153e7af981472d8da199c/618b02d13e938ae1f8ad1e45_Terra_White_paper.pdf
+    url:
+whitepaper: https://assets.website-files.com/611153e7af981472d8da199c/618b02d13e938ae1f8ad1e45_Terra_White_paper.pdf
 overview: |
   TerraUSD (UST) is an algorithmic stablecoin within the Terra ecosystem which aims to maintain a peg to the US Dollar. UST aims to achieve stability through an elastic supply mechanism enabled by the Terra blockchain's native token, Luna, which is minted or sold based on the demand preferences of the UST token. Due to a significant price reduction in the in the LUNA token, has been unable to maintain its peg to the U.S. Dollar.
 details:
@@ -23,35 +22,35 @@ details:
   - title: Backing Assets
     value: |
       1. LUNA
-   
+
 team:
-  # - avatar: 
+  # - avatar:
   #   name: Alex de Lorraine
   #   title: CEO at Archblock and MD of TrueCurrencies (TUSD)
   #   twitter: https://twitter.com/alexdelorraine
   #   linkedin: https://www.linkedin.com/in/alexdelorraine/
-  # - avatar: 
+  # - avatar:
   #   name: Bill Wolf
   #   title: Chief Investment Officer at Archblock
   #   linkedin: https://www.linkedin.com/in/bill-wolf-5015a343/
-  # - avatar: 
+  # - avatar:
   #   name: Diana Bushard
   #   title: General Counsel at Archblock
   #   linkedin: https://www.linkedin.com/in/diana-bushard-21ab461/
-  # - avatar: 
+  # - avatar:
   #   name: Rafael Cosman
-  #   title: Co-Founder and Board Member of Archblock 
+  #   title: Co-Founder and Board Member of Archblock
   #   twitter: https://twitter.com/RafaelCosman
   #   linkedin: https://www.linkedin.com/in/rafaelcosman/
-  # - avatar: 
+  # - avatar:
   #   name: Ryan Christensen
   #   title: Board Member of Archblock
   #   linkedin: https://www.linkedin.com/in/ryanechristensen/
-  # # - avatar: 
-  # #   name: 
-  # #   title: 
-  # #   twitter: 
-  # #   linkedin: 
+  # # - avatar:
+  # #   name:
+  # #   title:
+  # #   twitter:
+  # #   linkedin:
 
 social_media:
   # twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
@@ -67,51 +66,51 @@ social_media:
   #     value: [42/8, 90/10, 81/40]
 
 financial_analysis:
-  financial_audit: https://lfg.org/audit/LFG-Audit-2022-11-14.pdf
+  financial_audit:
     auditors: Terraform Labs
     score: N.A.
     analysis: N.A.
     reserve_holdings_percentage:
       # - title: US Treasury Bills
       #   value: 751913076.50
-      # - title: Fill digital trust limited 
+      # - title: Fill digital trust limited
       #   value: 501850000.00
       # - title: Us dollar cash
       #   value: 40780014.51
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     # - round: "-"
-    #   amount: 
+    #   amount:
     #   valuation: "-"
-    #   date: 
+    #   date:
     #   investors: |
     #     * Andreessen Horowitz
     #     * Polychain
@@ -126,19 +125,19 @@ security_and_compliance:
       - title: Smart Contract Audits
         value: Contracts audited once by certik .
       - title: Security Auditors
-        value: Certik 
+        value: Certik
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: 
+        value:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -148,7 +147,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -180,13 +179,13 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
         value: https://assets.website-files.com/611153e7af981472d8da199c/618b02d13e938ae1f8ad1e45_Terra_White_paper.pdf
       - title: Smart Contract
-        value: - https://etherscan.io/token/0xa47c8bf37f92aBed4A126BDA807A7b7498661acD#code#F1#L1
+        value: https://etherscan.io/token/0xa47c8bf37f92aBed4A126BDA807A7b7498661acD#code#F1#L1
       - title: Token launch
         value: |
           * Ethereum: 0xa47c8bf37f92aBed4A126BDA807A7b7498661acD
@@ -246,4 +245,3 @@ security_and_compliance:
       - title: Accountability Mechanisms
         value: |
           The governance structure and response to the crisis suggest a lack of mechanisms for holding decision-makers accountable to the broader community.​​
-          
